# gstaco

./: .gitignore  CMakeLists.txt  main.cpp
apps/: bcentrality.txt  bfs.txt  bfs_taco.cpp  cc_taco.cpp  custom_ops.h  examples.txt  pagerank.txt  sssp_delta_stepping.txt  sssp_taco.cpp
docker/: check.sh  docker-compose.yml  ubuntu_21.04.Dockerfile
include/einsum_taco/: type.h
include/einsum_taco/base/: assert.h
include/einsum_taco/codegen/: codegen_utils.h  codegen_visitor.h  finch_codegen_visitor.h
include/einsum_taco/gstrt/: csr_tensor.h  runtime.h  tensor.h
include/einsum_taco/ir/: acceptor.h  cleanup.h  context.h  dump_ast.h  ir.h  ir_rewriter.h  ir_rewriter_.h  type.h
include/einsum_taco/parser/: heading.h
src/: type.cpp
src/base/: assert.cpp
src/codegen/: codegen_utils.cpp  codegen_visitor.cpp  codegen_visitor.h  finch_codegen_visitor.cpp
src/gstrt/: csr_tensor.cpp  runtime.c  tensor.cpp  tensor.txt
src/ir/: cleanup.cpp  context.cpp  dump_ast.cpp  ir.cpp  ir_rewriter.cpp  ir_rewriter_.cpp  type.cpp
src/parser/: calc  in.txt  main.cc  parser.lex  parser.y
test/: CMakeLists.txt  config.cpp  dump_test.cpp  parse_test.cpp  suppressions.txt  utils.h
test/apps/: bc_taco.cpp  bfs_taco.cpp  cc_taco.cpp  custom_ops.h  pr_taco.cpp  sssp_taco.cpp  utils.h
test/codegen/: gen_test.cpp
test/codegen/inputs/: definition2.txt  definition4.txt
test/codegen/outputs/: definition1.cpp  definition2.cpp  definition4.cpp
test/data/codegen/drivers/: driver_bc.cpp  driver_bfs.cpp  driver_pagerank.cpp  driver_sssp.cpp  finch_driver_bc.cpp  finch_driver_bfs.cpp  finch_driver_cc2.cpp  finch_driver_pagerank.cpp  finch_driver_pagerank_bench.cpp  finch_driver_sssp.cpp
test/data/codegen/graphs/: graph1.txt  graph2.txt  graph3.txt  graph4.txt  graph5.txt  graph6.txt  pr_out
test/data/codegen/inputs/: bc.txt  bfs.txt  bfs_step.txt  call.txt  call_condition1.txt  call_condition2.txt  call_condition3.txt  call_repeat1.txt  call_repeat2.txt  call_repeat3.txt  call_repeat4.txt  call_repeat5.txt  cc.txt  cc2.txt  definition1.txt  definition2.txt  definition3.txt  formats1.txt  formats2.txt  formats3.txt  formats4.txt  outer_loop_var1.txt  outer_loop_var2.txt  outer_loop_var3.txt  outer_loop_var4.txt  outer_loop_var5.txt  pagerank.txt  pagerank_bench.txt  reductions.txt  run1.txt  scatter_gather.txt  sssp.txt
test/data/codegen/outputs/: bfs_step.cpp  call.cpp  call_condition1.cpp  call_condition2.cpp  call_repeat1.cpp  call_repeat2.cpp  call_repeat3.cpp  call_repeat4.cpp  call_repeat5.cpp  definition1.cpp  definition2.cpp  definition3.cpp  definition4.cpp  outer_loop_var1.cpp  outer_loop_var2.cpp
test/data/parser/inputs/: bcentrality.txt
test/data/rewriter/inputs/: index_vars1.txt
test/data/rewriter/outputs/: index_vars1.txt
test/gstrt/: tensor_test.cpp
test/ir/: dump_test.cpp  ir_rewriter_test.cpp
test/parser/: parse_test.cpp
